--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.662.0",
+    "@types/aws-sdk": "^0.0.42",
     "@types/google-one-tap": "^1.2.6",
+    "aws-sdk": "^2.1691.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -10,6 +13,8 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.5",
     "otp-generator": "^4.0.1"
@@ -20,6 +25,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.5.5",
     "@types/nodemailer": "^6.4.16",
     "@types/otp-generator": "^4.0.2",
