--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@aws-sdk/client-s3": "^3.662.0",
+    "@aws-sdk/lib-storage": "^3.662.0",
     "@types/aws-sdk": "^0.0.42",
     "@types/google-one-tap": "^1.2.6",
     "aws-sdk": "^2.1691.0",
