--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-validator": "^7.2.0",
     "google-auth-library": "^9.14.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
@@ -22,6 +23,7 @@
     "otp-generator": "^4.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -31,7 +33,12 @@
     "@types/node": "^22.5.5",
     "@types/nodemailer": "^6.4.16",
     "@types/otp-generator": "^4.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
+    "@typescript-eslint/parser": "^8.10.0",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.10.0"
   }
 }
