--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.15",
-    "nodemon": "^3.1.5",
-    "otp-generator": "^4.0.1"
+    "nodemon": "^3.1.7",
+    "otp-generator": "^4.0.1",
+    "razorpay": "^2.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
