--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "start": "node dist/server.js",
+    "build":"tsc"
+  },
+
   "dependencies": {
     "@aws-sdk/client-s3": "^3.662.0",
     "@aws-sdk/lib-storage": "^3.662.0",
